Change image location

--- a/artiste-dj.html
+++ b/artiste-dj.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset ="UTF-8">
   <title>DJ Connus</title>
-  <link rel="shortcut icon" href="images/favicon.png">
+  <link rel="shortcut icon" href="https://i.imgur.com/UFXLrXH.png">
   <link rel="stylesheet" href="css/artistes.css">
 </head>
 <body>
   <main>
     <nav>
         <ul>
-          <li><img src="images/favicon.png" height="100" width="100" class="image_nav" alt="Image Logo">
+          <li><img src="https://i.imgur.com/UFXLrXH.png" height="100" width="100" class="image_nav" alt="Image Logo">
           <li><a href="index.html">Accueil</a></li>
           <li><a href="materiel.html">Materiel</a></li>
           <li><a class="active" href="#home">Artiste DJ</a></li>
@@ -86,7 +86,7 @@
       <section class="SOL">
         <h2>Sound Of Legend</h2>
         <br>
-        <img src="images/sol.png" class="artistes" alt="SOL">
+        <img src="https://i.imgur.com/mYJ0mEQ.jpg" class="artistes" alt="SOL">
         <p class = "legende">(Sound of Legend lors d'un concert en plein air à Granville (50))</p>
         <br>
         <p>
