--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset ="UTF-8">
   <title>Le metier de DJ</title>
-  <link rel="shortcut icon" href="images/favicon.png">
+  <link rel="shortcut icon" href="https://i.imgur.com/UFXLrXH.png">
   <link rel="stylesheet" href="css/index.css">
 </head>
 
@@ -12,7 +12,7 @@
     <article class="principal">
       <section class="Menu">
         <ul>
-          <li><img src="images/favicon.png" height="100" width="100" class="image_nav" alt="Image Logo">
+          <li><img src="https://i.imgur.com/UFXLrXH.png" height="100" width="100" class="image_nav" alt="Image Logo">
           <li><a class="active" href="#home">Accueil</a></li>
           <li><a href="materiel.html">Materiel</a></li>
           <li><a href="artiste-dj.html">Artiste DJ</a></li>
@@ -50,10 +50,10 @@
       <section class = "Droite">
         <h3>Animateurs d'événements </h3>
         <br>
-        <img src="https://imgur.com/jAEV9ym.jpg" alt="Dj-About" class="img-gauche">
+        <img src="https://i.imgur.com/pkzMuwp.jpg" alt="Dj-About" class="img-gauche">
         <br>
         <p>Les animateurs d'evenements sont aussi appelés DJ. Il composent peu voir pas de musique comme pourrais le faire un DJ travaillant
-        dans des boîtes de nuit, les annimateurs d'evenements vont animer les soirées, les mariage ainsi que tout autres evenements. Il peuvent
+        dans des boîtes de nuit, les animateurs d'evenements vont animer les soirées, les mariage ainsi que tout autres evenements. Il peuvent
         proposé des préstation en plus de celle de l'ambiance musicale de la soirée, comme par exemple un écran géant sur lequel le public
         choisis les photos diffuser sur celui-ci.</p>
     </section>
