--- a/materiel.html
+++ b/materiel.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset ="UTF-8">
   <title>Le matériel</title>
-  <link rel="shortcut icon" href="images/favicon.png">
+  <link rel="shortcut icon" href="https://i.imgur.com/UFXLrXH.png">
   <link rel="stylesheet" href="css/materiel.css">
 </head>
 <body>
   <main>
     <nav>
         <ul>
-          <li><img src="images/favicon.png" height="100" width="100" class="image_nav" alt="Image Logo">
+          <li><img src="https://i.imgur.com/UFXLrXH.png" height="100" width="100" class="image_nav" alt="Image Logo">
           <li><a href="index.html">Accueil</a></li>
           <li><a class="active" href="#home">Materiel</a></li>
           <li><a href="artiste-dj.html">Artiste DJ</a></li>
@@ -19,10 +19,7 @@
     </nav>
     <article class="container">
       <section class="Titre">
-          <h1>Le materiel d'un DJ</h1>
-      </section>
-      <section class = "contenue">
-        <p>Test du materiel</p>
+          <h1>Titre</h1>
       </section>
     </article>
 
