--- a/source.html
+++ b/source.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset ="UTF-8">
   <title>Hello World</title>
-  <link rel="shortcut icon" href="images/favicon.png">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="shortcut icon" href="https://i.imgur.com/UFXLrXH.png">
+  <link rel="stylesheet" href="css/sources.css">
 </head>
 <body>
   <main>
     <nav>
         <ul>
-          <li><img src="images/favicon.png" height="100" width="100" class="image_nav" alt="Image Logo">
+          <li><img src="https://i.imgur.com/UFXLrXH.png" height="100" width="100" class="image_nav" alt="Image Logo">
           <li><a href="index.html">Accueil</a></li>
           <li><a href="materiel.html">Materiel</a></li>
           <li><a href="artiste-dj.html">Artiste DJ</a></li>
