--- a/materiel.html
+++ b/materiel.html
@@ -19,7 +19,25 @@
     </nav>
     <article class="container">
       <section class="Titre">
-          <h1>Titre</h1>
+          <h1>Le materiel d'un DJ</h1>
+      </section>
+      <section class = "contenue">
+        <p>La liste ci-dessous présenté n'est pas exhaustif</p>
+        <section class="contenu">
+
+            <section class="Table">
+              <h2>Table de mixage</h2>
+              <img src="images/table-mixage.png " alt="">
+
+            </section>
+            <section class="Lumière">
+              <img src="images/table-mixage.png " alt="">
+            </section>
+            <section class="Enceintes">
+              <img src="images/table-mixage.png " alt="">
+            </section>
+
+        </section>
       </section>
     </article>
 
