--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 </head>
 
 <body>
+  <nav>
+    <ul>
+      <li><img src="https://i.imgur.com/UFXLrXH.png" height="100" width="100" class="image_nav" alt="Image Logo">
+      <li><a class="active" href="#home">Accueil</a></li>
+      <li><a href="materiel.html">Materiel</a></li>
+      <li><a href="artiste-dj.html">Artiste DJ</a></li>
+      <li><a href="source.html">Source</a></li>
+    </ul>
+  </nav>
   <main>
     <article class="principal">
       <section>
-        <ul>
-          <li><img src="https://i.imgur.com/UFXLrXH.png" height="100" width="100" class="image_nav" alt="Image Logo">
-          <li><a class="active" href="#home">Accueil</a></li>
-          <li><a href="materiel.html">Materiel</a></li>
-          <li><a href="artiste-dj.html">Artiste DJ</a></li>
-          <li><a href="source.html">Source</a></li>
-        </ul>
       </section>
       <section class="Titre">
       <h1>Le métier de DJ</h1>
