--- a/materiel.html
+++ b/materiel.html
@@ -22,23 +22,60 @@
           <h1>Le materiel d'un DJ</h1>
       </section>
       <section class = "contenue">
-        <p>La liste ci-dessous présenté n'est pas exhaustif</p>
+        <p>La liste ci-dessous présentée n'est pas exhaustive</p>
         <section class="contenu">
 
             <section class="Table">
               <h2>Table de mixage</h2>
-              <img src="images/table-mixage.png " alt="">
+              <img src="https://i.imgur.com/spC4smh.png" alt="">
+              <p>La table de mixage est un des éléments principal des DJ. Elle est au DJ ce que le velo est au cycliste
+                Pour les plus agairi des DJ elle permet de faire du remix en direct, ou en studio, elle est pour d'autres
+                plus un outil de travail indépendant que leur permet de ne pas utiliser un PC.
+                Il y a deux catégories de table de mixage:
+                <br>
+                  -Les controlleurs :
+                  Il vous permettent de controler un logiciel préablement installé sur votre PC (pour ne cité qu'un seul des ces logiciel
+                  , on peut citer Serrato), l'image se trouvant au dessus est controlleur.
+                  <br>
+                  -Les tables de mixages indépendante:
+                  Elles vous permettent de tout faire, changer les fréquences des graves,medium,aigus, faire une
+                  boucle (répéter un morceau de la chanson en boucle) et plein d'autres choses, mais celle-ci sont néanmoins plus cher que les simples
+                  controlleurs.
+                <p>
 
             </section>
             <section class="Lumière">
-              <img src="images/table-mixage.png " alt="">
+              <h2>Portique de lumières</h2>
+              <br>
+              <img src="https://i.imgur.com/U6kpW66.png " height="225" width="325" class="img_lumiere" alt ="">
+              <p>Un portique de lumiere est comme son nom l'indique un portique où la plupart des éclairage sont
+              fixées. Ils sont souvent en hauteur pour pouvoir éclairer la piste de danse le plus possibles.
+              Ces éclairages sont le plus souvent controllé par ce qu'on appelle un controlleur DMX (Digital Multiplex).
+              Cela permet donc de controllé via une table de controle DMX (comme ci-dessous) ou via un ordinateur tout les éclairages ainsi
+              que tout les appareils prenant en charge le DMX comme les machinnes à fummée ou à bulles.</p>
+              <br>
+              <img src="https://i.imgur.com/g3HodVC.png" height="130" width="250" alt="">
             </section>
             <section class="Enceintes">
-              <img src="images/table-mixage.png " alt="">
+              <h2>Système son</h2>
+              <br>
+              <img src="https://i.imgur.com/D6rwkf7.png " height="225" width="225" alt="">
+              <p>Pour terminer, que serait un DJ sans un bon système de son ?
+              Celui-ci est au minimum composé d'un paire d'enceintes ainsi que d'un amplificateur, sur l'image ci-dessous
+              on peut y voir un système de son avec une paire d'enceintes ainsi qu'un caisson de basses. Ce dernier
+              joue le rôle d'un amplificateur et ne diffuses que les basses du morceau, alors que les enceintes quand à elles laissent
+              passer toutes les fréquences du son.
+              La plupart du temps le système son peut-être complété d'un ou plusieurs micro pour que le DJ, puissent jouer et interagir
+              avec son public, il joue aussi un rôle d'annimateur.</p>
             </section>
 
         </section>
       </section>
+      <footer class="footer">
+        <br>
+        <p>Dorey Grégoire BUT RT 1A</p>
+        <br>
+      </footer>
     </article>
 
   </main>
