--- a/source.html
+++ b/source.html
@@ -2,7 +2,7 @@
 <html lang ="fr">
 <head>
   <meta charset ="UTF-8">
-  <title>Hello World</title>
+  <title>Sources</title>
   <link rel="shortcut icon" href="https://i.imgur.com/UFXLrXH.png">
   <link rel="stylesheet" href="css/sources.css">
 </head>
@@ -17,6 +17,47 @@
           <li><a class="active" href="#home">Source</a></li>
         </ul>
     </nav>
+    <article class="source">
+      <section class="Titre">
+        <h1>Sources des pages</h1>
+      </section>
+
+      <section class="Contenue">
+        <h2>Page Acceuil</h2>
+        <p>Les images de la page ainsi que l'image du fond sont extraites du site <a href="https://pixabay.com" class="link">Pixabay</a> </p>
+        <p>L'image en fond du lecteur audio se trouve sur <a href="https://i1.sndcdn.com/artworks-cu5lpGmsWziwQQav-io3xAg-t500x500.jpg" class="link">Soundcloud</a></p>
+        <p>L'audio disponible sur <a href="https://soundcloud.com/jlowofficiel/squid-game-x-dont-let-me-down" class="link">Soundcloud</a></p>
+        <h2>Page Materiel</h2>
+        <p>Toutes les images de la page ont été trouvé via une recherche effectué sur Google Images</p>
+        <p>L'image du fond est extraites du site <a href="https://pixabay.com" class="link">Pixabay</a> </p>
+        <p>L'image de la table de mixage <a href="https://static.sonovente.com/img/library/zoom/26/450/26843_6.jpg" class="link">Sonovente</a></p>
+        <p>L'image du portique de lumière <a href="https://m.media-amazon.com/images/I/51ecDHUhGBL._SL500_.jpg" class="link">Amazon</a></p>
+        <p>L'image du système son <a href="https://res.cloudinary.com/chal-tec/image/upload/w_545,q_auto,f_auto,dpr_2.0/bbg/10032278/Gallery/10032278_uk_0001_titel___aunapro_Cube_1812_Aktiv_PA_Set_1600_Watt_reedit.jpg" class="link">Cloudinary</a></p>
+        <h2>Page Artiste DJ</h2>
+        <p>L'image du fond est extraites du site <a href="https://pixabay.com" class="link">Pixabay</a> </p>
+        <p>Tout les audio ont été téléchargé depuis <a href="https://youtube.com" class="link">Youtube</a></p>
+        <p>L'image de David Guetta <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/David_Guetta_live_%40_MTV_EMA_2018.png/800px-David_Guetta_live_%40_MTV_EMA_2018.png" class="link">Wikipedia</a></p>
+        <p>L'image de l'audio de David Guetta <a href="https://i1.sndcdn.com/artworks-wyGWyKaoWZhVwrbQ-tTzzKg-t500x500.jpg" class="link">Soundcloud</a></p>
+        <p>L'image de Avicii <a href="https://upload.wikimedia.org/wikipedia/commons/8/83/Avicii_2014_003cr.jpg"class="link">Wikipedia</a></p>
+        <p>L'image de l'audio de Avicii <a href="https://m.media-amazon.com/images/I/71-ZAJjOE5L._SS500_.jpg" class="link">Amazon</a></p>
+        <p>L'image de Armin Van Bureen <a href="https://images.lesindesradios.fr/medias/UBL5BgYYYQ/image/@facebook.com%20arminvanbuuren1646820966192.jpg" class="link">Les indes radios</a></p>
+        <p>L'image de l'audio de Armin Van Bureen <a href="https://m.media-amazon.com/images/I/71-z0gZbESL._SS500_.jpg" class="link">Amazon</a></p>
+        <p>L'image de Alan Walker <a href="https://i.discogs.com/vVGOTu6fw4A-s1AzZv98wTs3qR1hU5xAtg38phXkk18/rs:fit/g:sm/q:40/h:300/w:300/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9BLTQ4Mjc2/MjItMTY0MjY0MjIy/Mi0zMDM3LmpwZWc.jpeg"class="link">Discogs</a></p>
+        <p>L'image de l'audio de Alan Walker <a href="https://m.media-amazon.com/images/I/91Jdh9iNuEL._SX355_.jpg" class="link">Amazon</a></p>
+        <p>L'image de Sound of Legend fournie par une connaissance à été prise lors d'un concert en plein air Granville</p>
+        <p>L'image de l'audio de Sound of Legend <a href="https://i.ytimg.com/an/3MoZhe9_cq8/10724833387723187151_mq.jpg?v=6347c2a5" class="link">Ytimg</a></p>
+        <h2>Page source</h2>
+        <p>L'image du fond est extraites du site <a href="https://pixabay.com" class="link">Pixabay</a> </p>
+        <h2>Divers</h2>
+        <p>Toutes les pages du site sont synchronisées sur Github <a href="https://github.com/Gregoire-Dorey/Projet" class="link"> à cette adresse</a></p>
+        <p>Toutes les images sont hébergées sur <a href="https://imgur.com/"class="link">Imgur</a></p>
+      </section>
+      <footer class="footer">
+        <br>
+        <p>Dorey Grégoire BUT RT 1A</p>
+        <br>
+      </footer>
+    </article>
 
   </main>
 </body>
