add Copy-Left and Commentary

--- a/artiste-dj.html
+++ b/artiste-dj.html
@@ -100,7 +100,9 @@
       </section>
       <footer class="footer">
         <br>
-        <p>Dorey Grégoire BUT RT 1A</p>
+        <p><p class="copy-left">©</p> COPYLEFT-Dorey Grégoire BUT RT 1A</p>
+        <br>
+        <p class="details">Page HTML et CSS validée par W3C</p>
         <br>
       </footer>
     </article>
