--- a/materiel.html
+++ b/materiel.html
@@ -27,7 +27,7 @@
 
             <section class="Table">
               <h2>Table de mixage</h2>
-              <img src="https://i.imgur.com/spC4smh.png" alt="">
+              <img src="https://i.imgur.com/spC4smh.png" alt="Table de mixage">
               <p>La table de mixage est un des éléments principal des DJ. Elle est au DJ ce que le velo est au cycliste
                 Pour les plus agairi des DJ elle permet de faire du remix en direct, ou en studio, elle est pour d'autres
                 plus un outil de travail indépendant que leur permet de ne pas utiliser un PC.
@@ -47,19 +47,19 @@
             <section class="Lumière">
               <h2>Portique de lumières</h2>
               <br>
-              <img src="https://i.imgur.com/U6kpW66.png " height="225" width="325" class="img_lumiere" alt ="">
+              <img src="https://i.imgur.com/U6kpW66.png " height="225" width="325" class="img_lumiere" alt ="Portique Lumière">
               <p>Un portique de lumiere est comme son nom l'indique un portique où la plupart des éclairage sont
               fixées. Ils sont souvent en hauteur pour pouvoir éclairer la piste de danse le plus possibles.
               Ces éclairages sont le plus souvent controllé par ce qu'on appelle un controlleur DMX (Digital Multiplex).
               Cela permet donc de controllé via une table de controle DMX (comme ci-dessous) ou via un ordinateur tout les éclairages ainsi
               que tout les appareils prenant en charge le DMX comme les machinnes à fummée ou à bulles.</p>
               <br>
-              <img src="https://i.imgur.com/g3HodVC.png" height="130" width="250" alt="">
+              <img src="https://i.imgur.com/g3HodVC.png" height="130" width="250" alt="Controlleur DMX">
             </section>
             <section class="Enceintes">
               <h2>Système son</h2>
               <br>
-              <img src="https://i.imgur.com/D6rwkf7.png " height="225" width="225" alt="">
+              <img src="https://i.imgur.com/D6rwkf7.png " height="225" width="225" alt="Système son">
               <p>Pour terminer, que serait un DJ sans un bon système de son ?
               Celui-ci est au minimum composé d'un paire d'enceintes ainsi que d'un amplificateur, sur l'image ci-dessous
               on peut y voir un système de son avec une paire d'enceintes ainsi qu'un caisson de basses. Ce dernier
@@ -73,7 +73,9 @@
       </section>
       <footer class="footer">
         <br>
-        <p>Dorey Grégoire BUT RT 1A</p>
+        <p><p class="copy-left">©</p> COPYLEFT-Dorey Grégoire BUT RT 1A</p>
+        <br>
+        <p class="details">Page HTML et CSS validée par W3C</p>
         <br>
       </footer>
     </article>
