--- a/source.html
+++ b/source.html
@@ -38,11 +38,11 @@
         <p>Tout les audio ont été téléchargé depuis <a href="https://youtube.com" class="link">Youtube</a></p>
         <p>L'image de David Guetta <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/David_Guetta_live_%40_MTV_EMA_2018.png/800px-David_Guetta_live_%40_MTV_EMA_2018.png" class="link">Wikipedia</a></p>
         <p>L'image de l'audio de David Guetta <a href="https://i1.sndcdn.com/artworks-wyGWyKaoWZhVwrbQ-tTzzKg-t500x500.jpg" class="link">Soundcloud</a></p>
-        <p>L'image de Avicii <a href="https://upload.wikimedia.org/wikipedia/commons/8/83/Avicii_2014_003cr.jpg"class="link">Wikipedia</a></p>
+        <p>L'image de Avicii <a href="https://upload.wikimedia.org/wikipedia/commons/8/83/Avicii_2014_003cr.jpg" class="link">Wikipedia</a></p>
         <p>L'image de l'audio de Avicii <a href="https://m.media-amazon.com/images/I/71-ZAJjOE5L._SS500_.jpg" class="link">Amazon</a></p>
         <p>L'image de Armin Van Bureen <a href="https://images.lesindesradios.fr/medias/UBL5BgYYYQ/image/@facebook.com%20arminvanbuuren1646820966192.jpg" class="link">Les indes radios</a></p>
         <p>L'image de l'audio de Armin Van Bureen <a href="https://m.media-amazon.com/images/I/71-z0gZbESL._SS500_.jpg" class="link">Amazon</a></p>
-        <p>L'image de Alan Walker <a href="https://i.discogs.com/vVGOTu6fw4A-s1AzZv98wTs3qR1hU5xAtg38phXkk18/rs:fit/g:sm/q:40/h:300/w:300/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9BLTQ4Mjc2/MjItMTY0MjY0MjIy/Mi0zMDM3LmpwZWc.jpeg"class="link">Discogs</a></p>
+        <p>L'image de Alan Walker <a href="https://i.discogs.com/vVGOTu6fw4A-s1AzZv98wTs3qR1hU5xAtg38phXkk18/rs:fit/g:sm/q:40/h:300/w:300czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9BLTQ4Mjc2/MjItMTY0MjY0MjIy/Mi0zMDM3LmpwZWc.jpeg" class="link">Discogs</a></p>
         <p>L'image de l'audio de Alan Walker <a href="https://m.media-amazon.com/images/I/91Jdh9iNuEL._SX355_.jpg" class="link">Amazon</a></p>
         <p>L'image de Sound of Legend fournie par une connaissance à été prise lors d'un concert en plein air Granville</p>
         <p>L'image de l'audio de Sound of Legend <a href="https://i.ytimg.com/an/3MoZhe9_cq8/10724833387723187151_mq.jpg?v=6347c2a5" class="link">Ytimg</a></p>
@@ -50,11 +50,13 @@
         <p>L'image du fond est extraites du site <a href="https://pixabay.com" class="link">Pixabay</a> </p>
         <h2>Divers</h2>
         <p>Toutes les pages du site sont synchronisées sur Github <a href="https://github.com/Gregoire-Dorey/Projet" class="link"> à cette adresse</a></p>
-        <p>Toutes les images sont hébergées sur <a href="https://imgur.com/"class="link">Imgur</a></p>
+        <p>Toutes les images sont hébergées sur <a href="https://imgur.com/" class="link">Imgur</a></p>
       </section>
       <footer class="footer">
         <br>
-        <p>Dorey Grégoire BUT RT 1A</p>
+        <p><p class="copy-left">©</p> COPYLEFT-Dorey Grégoire BUT RT 1A</p>
+        <br>
+        <p class="details">Page HTML et CSS validée par W3C</p>
         <br>
       </footer>
     </article>
