--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       <h1>Le métier de DJ</h1>
     </section>
     <section class="texte-1">
-      <p>Le metier de  DJ diminutif de Disc Jockey consiste à animer une soirée, un anniversaire ou encore un mariage.
+      <p>Le métier de  DJ, diminutif de Disc Jockey consiste à animer une soirée, un anniversaire ou encore un mariage.
         Les DJ sont la plupart du temps soumis à la réglementation de la SACEM (Sociéte des Auteurs, Compositeurs et Éditeurs de musiques).
-        Certaines personnes classifient les DJ en deux catégories ceux qui travaillent en tant qu'animateur dans les événements ponctuels et les DJ
+        Certaines personnes classifient les DJ en deux catégories : ceux qui travaillent en tant qu'animateur dans les événements ponctuels et les DJ
         qui travaillent dans des Clubs/Boites de Nuit/Festivals.
-        Jusqu'à présent, il n'existe encore aucun diplôme de DJ, cependant l'Ecole des DJ de l'<a href="http://www.ecole-des-dj.com/" class="link">UCPA</a> délivre un certificat "d'animateur musical et scénique"
+        Jusqu'à présent, il n'existe encore aucun diplôme de DJ, cependant l'Ecole des DJ de l'<a href="http://www.ecole-des-dj.com/" class="link">UCPA</a> délivre un "Certificat d'animateur musical et scénique"
 
       </p>
     </section>
@@ -41,10 +41,10 @@
           <br>
           <img src="https://i.imgur.com/kUI40gz.jpg" alt="Dj-About" class="img-gauche">
           <br>
-          <p>Quand on parle de DJ, la plupart des gens pensent à David Guetta, Avicii, Martin Garrix et bien d'autres. Alors que tout ces grands
+          <p>Quand on parle de DJ, la plupart des gens pensent à David Guetta, Avicii, Martin Garrix et bien d'autres. Alors que tous ces grands
           artistes DJ (Voir la page <a href="artiste-dj.html" class="link"> Artistes DJ</a>), se sont fait connaitre grâce à
-          tubes interplanetaires. Il reste néanmoins d'autres DJ qui font de bonnes préstations dans le monde de la nuit, leurs activitées pouvant
-          croitre grâce au réseaux sociaux. Ci-dessous un extrait d'un DJ de boite de nuit et de festivals qui se nomme JLOW</p>
+          tubes planétaires. Il reste néanmoins d'autres DJ qui offrent de bonnes préstations dans le monde de la nuit, leurs renommées pouvant
+          croitre grâce aux réseaux sociaux. Ci-dessous, un extrait d'un morceau d'un DJ de boites de nuit et de festivals qui se nomme JLOW</p>
       <br>
       <audio class ="left" controls src="https://hogcraft.fr/files/but/jlow.mp3"></audio>
       </section>
@@ -54,9 +54,9 @@
         <br>
         <img src="https://i.imgur.com/pkzMuwp.jpg" alt="Dj-About" class="img-gauche">
         <br>
-        <p>Les animateurs d'evenements sont aussi appelés DJ. Il composent peu voir pas de musique comme pourrais le faire un DJ travaillant
-        dans des boîtes de nuit, les animateurs d'evenements vont animer les soirées, les mariage ainsi que tout autres evenements. Il peuvent
-        proposé des préstation en plus de celle de l'ambiance musicale de la soirée, comme par exemple un écran géant sur lequel le public
+        <p>Les animateurs d'événements sont aussi appelés DJ. Ils composent peu voire pas de musique, comme pourrait le faire un DJ travaillant
+          dans des boîtes de nuit, les animateurs d'événements vont animer les soirées, les mariages ainsi que tout autre événement. Ils peuvent
+        proposer des prestations en plus de celle de l'ambiance musicale de la soirée, comme par exemple un écran géant sur lequel le public
         choisis les photos diffuser sur celui-ci.</p>
     </section>
     </section>
