Correct orthograph faults

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <br>
         <p>Les animateurs d'événements sont aussi appelés DJ. Ils composent peu voire pas de musique, comme pourrait le faire un DJ travaillant
           dans des boîtes de nuit, les animateurs d'événements vont animer les soirées, les mariages ainsi que tout autre événement. Ils peuvent
-        proposer des prestations en plus de celle de l'ambiance musicale de la soirée, comme par exemple un écran géant sur lequel le public
-        choisis les photos diffuser sur celui-ci.</p>
+        proposer des prestations en plus de l'ambiance musicale de la soirée, comme par exemple un écran géant sur lequel le public
+        choisit des photos à diffuser.</p>
     </section>
     </section>
   </section>
