Corrct ortograph faukts 11/11/22-21:28

--- a/artiste-dj.html
+++ b/artiste-dj.html
@@ -28,9 +28,9 @@
         <br>
         <p>David Guetta est un artiste DJ mondialement connu notament pour ses titres Bad ou
         Titanium. David Guetta est né le 7 Novembre 1967 à Paris sous le nom de Pierre David Guetta.
-        Il a pu faire de nombreux duo notament avec Zara Larson à l'occassion du championat d'europe en 2016.
-        On peut aussi le retrouver dans des remix comme par exemple celui-ci comme on retrouve en dessous,
-        un remix de la chanson Blue de Effiel 65, qu'il remixé avec Bebe Rexha.
+        Il a pu faire de nombreux duos dont l'hymne du Championat d'Europe de football en 2016 avec Zara Larson.
+        On peut aussi le retrouver dans des remix comme celui que l'on retrouve ci-dessous,
+        remix de la chanson <em>Blue</em> de Effiel 65, remixé avec la voie de Bebe Rexha.
         </p>
         <br>
         <audio controls src="https://hogcraft.fr/files/but/david-guetta.mp3" class = "DG"></audio>
@@ -43,9 +43,9 @@
         <br>
         <p>Avicii est un artiste DJ suédois, on lui doit les titres Hey Brother et Wainting for Love.
            Avicii est né le 8 septembre 1989 et est mort le 20 avril 2018 à 28 ans. La cause de son décès reste
-           toujours flou 4 ans après. Sa famille évoquant un suicide alors que son manager n'a jamais comuniqué sur celle-ci.
-           Ses musiques de type sont mondialement connus. On peut voir une de ses musiques ci-dessous,
-           The nights sortie en 2014 juste avant The Day sortie elle en 2015.
+           toujours floue 4 ans après. Sa famille évoque un suicide alors que son manager n'a jamais comuniqué sur sa mort.
+           Ses musiques de type éléctro sont mondialement connues. On peut écouter une de ses musiques ci-dessous,
+           <em>The nights</em> sortie en 2014 juste avant <em>The Day</em> sortie elle en 2015.
         <p>
         <br>
         <audio controls src="https://hogcraft.fr/files/but/avicii.mp3" class = "avicii-song"></audio>
@@ -55,11 +55,11 @@
         <br>
         <img src="https://i.imgur.com/SSR3Sth.jpg" class="artistes" alt="AVB">
         <br>
-        <p>Armin Van Bureen est un Disck Jockey hollandais. Son titre le plus connu est Blah, Blah, Blah ,Blah un titre
-          de style plutot éléctro. Armin van Bureen est né le 25 décembre 1976 à Leyde au Pays-Bas. Il a commençais sa
+        <p>Armin Van Bureen est un Disck Jockey hollandais. Son titre le plus connu est <em>Blah, Blah, Blah ,Blah</em> un titre
+          de style plutot éléctro. Armin van Bureen est né le 25 décembre 1976 à Leyde au Pays-Bas. Il a commençé sa
           carrière de DJ au club Nexus.
-          Il est principalement inspiré du Disck Jockey français Jean-Michel Jarre on peut notament retrouvé
-          certaines notes des chansons de Jean-Michel Jarre dans la chanson Blah Blah Blah Blah ce trouvant ci-dessous.
+          Il s'est principalement inspiré du compositeur français Jean-Michel Jarre on peut notament retrouvé
+          certaines sonorités des chansons de Jean-Michel Jarre dans <em>Blah Blah Blah Blah</em> ci-dessous.
         <p>
         <br>
         <audio controls src="https://hogcraft.fr/files/but/armin-van-buuren.mp3" class = "avb-song"></audio>
@@ -70,10 +70,10 @@
         <img src="https://i.imgur.com/EyhqSXS.jpg" class="artistes" alt="Alan-Walker">
         <br>
         <p>
-          Alan Walker est un artiste DJ autrefois connu sous le nom DJ Walkzz britanico-norvégien.
+          Alan Walker est un artiste DJ britanico-norvégien autrefois connu sous le nom DJ Walkzz.
           Il est né le 24 août 1997 à Northampton en Angleterre.
-          Alan Walker gagne en noteriété en 2015 avec son tube Faded un de ses titre les plus connus mais on peut notament
-          cité le titre Ignite en featuring avec K-391. En 2014 il signe un contrat avec
+          Alan Walker gagne en notoriété en 2015 avec son tube <em>Faded</em> un de ses titres les plus connus mais on peut également
+          citer le titre <em>Ignite</em> en featuring avec K-391. En 2014 il signe un contrat avec
           le label NoCopyrightSong (NCS).
         <p>
         <br>
@@ -88,12 +88,12 @@
         <p class = "legende">(Sound of Legend lors d'un concert en plein air à Granville (50))</p>
         <br>
         <p>
-          Sound of Legend est un groupe de musique. Dont l'artiste principal se nome Zach, ce chanteur se
-          fait passer pour un super héros. Il se fait passer pour un super héros jusqu'a sur scène car il
-          se présente toujours masqué. Sound Of Legend n'ont pas crée de nouveau titre, il se contentent de
-          remixé les titres existant on peut notament cité :
-          Maniac sortit en 2022
-          ou encore I'm so excited sortit en octobre 2022 qu'on l'on peut écouté juste en dessous.
+          Sound of Legend est un groupe de musique, dont l'artiste principal se nomme Zach. Son chanteur se
+          présente comme un super héros jusqu'à sur scène car il se montre toujours masqué.
+          Sound Of Legend n'ont pas composé de chansons, ils se contentent de
+          remixer les titres existants tels que :
+          <em>Maniac</em> sortit en 2022
+          ou encore <em>I'm so excited</em> sortit en octobre 2022 aussi qu'on l'on peut écouter juste au dessous.
         <p>
         <br>
         <audio controls src="https://hogcraft.fr/files/but/sound-of-legend.mp3" class = "sol-song"></audio>
