--- a/materiel.html
+++ b/materiel.html
@@ -36,36 +36,36 @@
                   <p class="underline">-Les contrôleurs :</p>
                   Ils permettent de contrôler un logiciel préalablement installé sur le PC (Serato pour n'en citer qu'un seul), la photo ci-dessus est un contrôleur.
                   <br>
-                  <p class="underline">-Les table de mixage indépendants :</p>
-                  Elles vous permettent de tout faire, changer les fréquences des graves,medium,aigus, faire une
-                  boucle (répéter un morceau de la chanson en boucle) et plein d'autres choses, mais celle-ci sont néanmoins plus cher que les simples
-                  controlleurs.
+                  <p class="underline">-Les tables de mixage indépendantes :</p>
+                  Elles permettent de faire davantage de choses, changer les fréquences des graves, medium et aigus, faire une
+                  boucle (répéter un morceau de la chanson en boucle)... mais celles-ci sont néanmoins plus cheres que les simples
+                  contrôleurs.
                 <p>
 
             </section>
             <section class="Lumière">
               <h2>Portique de lumières</h2>
               <br>
-              <img src="https://i.imgur.com/U6kpW66.png " height="225" width="325" class="img_lumiere" alt ="Portique Lumière">
-              <p>Un portique de lumiere est comme son nom l'indique un portique où la plupart des éclairages sont
-              fixés. Ils sont souvent en hauteur pour pouvoir éclairer la piste de danse le plus possible.
-              Ces éclairages sont le plus souvent controllé par ce qu'on appelle un controlleur DMX (Digital Multiplex).
-              Cela permet donc de controller via une table de controle DMX (comme ci-dessous) ou via un ordinateur tout les éclairages ainsi
-              que tout les appareils prenant en charge le DMX comme les machinnes à fummée ou à bulles.</p>
+              <img src="https://i.imgur.com/U6kpW66.png " height="238" width="325" class="img_lumiere" alt ="Portique Lumière">
+              <p>Un pont lumineux est un portique sur lequel la plupart des éclairages sont fixés.
+                Leur hauteur leur permet d'éclairer un maximum de la piste de danse.
+              Ces éclairages sont généralement commandés par un ordinateur ou ce qu'on appelle un contrôleur DMX (Digital Multiplex, image ci-dessous).
+              Grâce à ces dispositifs on peut également gérer les machines à fumée ou à bulles.</p>
               <br>
-              <img src="https://i.imgur.com/g3HodVC.png" height="130" width="250" alt="Controlleur DMX">
+              <img src="https://i.imgur.com/g3HodVC.png" height="170" width="290" alt="Controlleur DMX">
             </section>
             <section class="Enceintes">
               <h2>Système son</h2>
               <br>
-              <img src="https://i.imgur.com/D6rwkf7.png " height="225" width="225" alt="Système son">
+              <img src="https://i.imgur.com/D6rwkf7.png " height="215" width="225" alt="Système son">
+              <br>
               <p>Pour terminer, que serait un DJ sans un bon système de son ?
-              Celui-ci est au minimum composé d'un paire d'enceintes ainsi que d'un amplificateur, sur l'image ci-dessus
-              on peut voir un système de son avec une paire d'enceintes ainsi qu'un caisson de basses. Ce dernier
-              joue le rôle d'un amplificateur et ne diffuses que les basses du morceau, alors que les enceintes quand à elles laissent
+              Celui-ci est au minimum composé d'une paire d'enceintes ainsi que d'un amplificateur pouvant être incorporé. Sur l'image ci-dessus
+              on peut voir un système de son incluant une paire d'enceintes et un caisson de basses. Ce dernier
+              joue le rôle d'amplificateur et ne diffuse que les basses du morceau, alors que les enceintes quant à elles, laissent
               passer toutes les fréquences du son.
-              La plupart du temps le système son peut-être complété d'un ou plusieurs micro pour que le DJ puissent jouer et interagir
-              avec son public, il joue donc aussi un rôle d'annimateur.</p>
+              La plupart du temps le système son peut être complété avec un ou plusieurs micros permettant au DJ de jouer et interagir
+              avec son public, il joue dans ce cas un rôle d'animateur.</p>
             </section>
 
         </section>
